--- a/src/css/App.css
+++ b/src/css/App.css
@@ -75,7 +75,7 @@ footer{
 .navbar-fixed-top {
     top: 0;
     border-width: 0 0 1px;
-    z-index: 1;
+    z-index: 1 !important;
 }
 
 .background {
