--- a/src/components/Swipe/Swipe.css
+++ b/src/components/Swipe/Swipe.css
@@ -11,6 +11,7 @@ box-sizing: border-box;
     position: absolute;
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
 .swipe-tutorial {
